log/build_2025-09-20_21-08-52/openarm_p_p/stderr.log
  File "/home/endika/Documents/openarm_ros2/install/openarm_p_p/lib/python3.10/site-packages/openarm_p_p/openarm_p_p.py", line 32
    else:
    ^^^^
SyntaxError: invalid syntax

